--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
     <style>
         canvas {
             position: fixed;
@@ -32,6 +34,7 @@
     <canvas id="myCanvas"></canvas>
     <button onClick="refreshPage()" id="playAgain">Play again</button>
     <script src="source.js"></script>
+    <script src="hubble.js"></script>
     <script src="sound.js"></script>
 </body>
 
